refactor(auth): add i18n to validation, refactor DTO, created SeviveSecurityUTils